--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -3,33 +3,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <FrameLayout
+    android:layout_height="match_parent"
+    tools:context=".SearchFragment">
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/fragment_tab_layout"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/mapContainer"
-        android:id="@+id/searchLayout">
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <android.support.v7.widget.SearchView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="5dp"
-            app:queryBackground="@color/colorSearchBar"
-            android:id="@+id/search_view"
-            app:queryHint="@string/title_search">
+        <android.support.design.widget.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/title_trucks" />
 
-        </android.support.v7.widget.SearchView>
-    </FrameLayout>
-    <com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+        <android.support.design.widget.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/title_food" />
+
+    </android.support.design.widget.TabLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/fragment_view_pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        tools:context=".SearchFragment"
-        android:id="@+id/mapContainer"
-        app:layout_constraintTop_toBottomOf="@id/searchLayout"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/fragment_tab_layout">
 
         <!-- TODO: Update blank fragment layout -->
-    </com.google.android.gms.maps.MapView>
+    </android.support.v4.view.ViewPager>
 </android.support.constraint.ConstraintLayout>
