--- a/app/src/main/res/layout/open_hour_item.xml
+++ b/app/src/main/res/layout/open_hour_item.xml
@@ -4,16 +4,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.AppCompatSpinner
         android:id="@+id/from_day_spinner"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginRight="8dp"
         android:entries="@array/days"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/view1"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -23,29 +22,23 @@
         android:id="@+id/view1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="@string/through_char"
         app:layout_constraintBottom_toBottomOf="@id/from_day_spinner"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/to_day_spinner"
         app:layout_constraintTop_toTopOf="@id/from_day_spinner" />
 
     <android.support.v7.widget.AppCompatSpinner
         android:id="@+id/to_day_spinner"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:entries="@array/days"
         app:layout_constraintBottom_toBottomOf="@id/view1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/view1"
         app:layout_constraintTop_toTopOf="parent">
 
     </android.support.v7.widget.AppCompatSpinner>
@@ -67,8 +60,10 @@
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/closes"
         android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@id/delete_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -76,11 +71,11 @@
         android:id="@+id/from_hour_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:entries="@array/hours"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
-        app:layout_constraintStart_toEndOf="@+id/textView">
+        app:layout_constraintEnd_toStartOf="@+id/view4">
 
     </android.support.v7.widget.AppCompatSpinner>
 
@@ -88,14 +83,11 @@
         android:id="@+id/view4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="@string/and_char"
         app:layout_constraintBottom_toBottomOf="@+id/from_hour_spinner"
-        app:layout_constraintEnd_toStartOf="@+id/from_minute_spinner"
-        app:layout_constraintStart_toEndOf="@+id/from_hour_spinner" />
+        app:layout_constraintEnd_toStartOf="@+id/from_minute_spinner" />
 
     <android.support.v7.widget.AppCompatSpinner
         android:id="@+id/from_minute_spinner"
@@ -125,11 +117,11 @@
         android:id="@+id/to_hour_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:entries="@array/hours"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
-        app:layout_constraintStart_toEndOf="@+id/textView2">
+        app:layout_constraintEnd_toStartOf="@+id/view3">
 
     </android.support.v7.widget.AppCompatSpinner>
 
@@ -137,13 +129,10 @@
         android:id="@+id/view3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="@string/and_char"
         app:layout_constraintEnd_toStartOf="@+id/to_minute_spinner"
-        app:layout_constraintStart_toEndOf="@+id/to_hour_spinner"
         app:layout_constraintTop_toTopOf="@+id/to_hour_spinner" />
 
     <android.support.v7.widget.AppCompatSpinner
@@ -169,5 +158,17 @@
         app:layout_constraintEnd_toEndOf="parent">
 
     </android.support.v7.widget.AppCompatSpinner>
+
+    <ImageButton
+        android:id="@+id/delete_button"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/add_button"
+        android:src="@drawable/ic_remove"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
