--- a/app/src/main/res/layout/foodtruck_list_item.xml
+++ b/app/src/main/res/layout/foodtruck_list_item.xml
@@ -14,7 +14,8 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:scaleType="centerInside"
+            android:scaleType="fitXY"
+            android:src="@drawable/foodtruck"
             android:cropToPadding="true"
             android:background="@android:color/darker_gray"
             android:contentDescription="@string/truck_image_content_description"
