--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -30,7 +30,8 @@
         android:id="@+id/fragment_view_pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_tab_layout">
+        app:layout_constraintTop_toBottomOf="@+id/fragment_tab_layout"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <!-- TODO: Update blank fragment layout -->
     </android.support.v4.view.ViewPager>
