--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="colorPrimaryOrange">#FFA500</color>
     <color name="colorPrimaryDarkOrange">#FF8C00</color>
     <color name="colorSearchBar">#FFFFFF</color>
+    <color name="colorPrimaryDarkBlue">#000080</color>
+    <color name="colorPrimaryBlue">#0000FF</color>
 </resources>
