--- a/app/src/main/res/layout/fragment_my_truck.xml
+++ b/app/src/main/res/layout/fragment_my_truck.xml
@@ -73,6 +73,24 @@
             android:background="@android:color/darker_gray"
             app:layout_constraintTop_toBottomOf="@id/phone" />
 
+        <TextView
+            android:id="@+id/view7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="@string/category"
+            android:textSize="18sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/view1" />
+
+        <View
+            android:id="@+id/view6"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="8dp"
+            android:background="@android:color/darker_gray"
+            app:layout_constraintTop_toBottomOf="@id/view7" />
+
         <android.support.constraint.Guideline
             android:id="@+id/guideline2"
             android:layout_width="wrap_content"
@@ -89,7 +107,7 @@
             android:textSize="18sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@id/guideline2"
-            app:layout_constraintTop_toBottomOf="@id/view1" />
+            app:layout_constraintTop_toBottomOf="@id/view6" />
 
         <ImageButton
             android:id="@+id/add_hour_button"
@@ -111,9 +129,9 @@
             app:layout_constraintTop_toBottomOf="@id/view2" />
 
         <android.support.v7.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/hours_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="189dp"
             app:layout_constraintTop_toBottomOf="@id/view3">
 
         </android.support.v7.widget.RecyclerView>
@@ -157,6 +175,16 @@
 
         </android.support.v7.widget.RecyclerView>
 
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:entries="@array/categories"
+            app:layout_constraintBottom_toBottomOf="@+id/view6"
+            app:layout_constraintEnd_toEndOf="parent" />
 
 
     </android.support.constraint.ConstraintLayout>
